// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render dot 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#505256",
      },
      Object {
        "fontFamily": "SourceSansPro-Regular",
      },
      Array [
        Object {
          "fontWeight": "bold",
        },
        undefined,
      ],
    ]
  }
>
   · 
</Text>
`;

exports[`render dot with style 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#505256",
      },
      Object {
        "fontFamily": "SourceSansPro-Regular",
      },
      Array [
        Object {
          "fontWeight": "bold",
        },
        Object {
          "color": "blue",
        },
      ],
    ]
  }
>
   · 
</Text>
`;
